# ez-template

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
tests/: CMakeLists.txt
tests/basic/: main.cpp
